--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h1>Yeni html dosyası</h1>
+    <p>Hey there!</p>
+    <p>Hey there!</p>
+    <p>Hey there!</p>
+    <p>Hey there!</p>
+    <p>Hey there!</p>
   </body>
 </html>
